Update base URL for password reset emails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,8 +52,8 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 logging.level.org.springframework.mail=DEBUG
 
-# Agregar URL base
-app.base-url=${APP_BASE_URL:http://localhost:8080}
+# Base URL Configuration
+app.base-url=${APP_BASE_URL:https://af-production.up.railway.app}
 
 
 # Backup Configuration
