Deshabilitar cache de Thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port=${PORT:8080}
 
 # Thymeleaf
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
+spring.resources.chain.cache=false
+spring.thymeleaf.template-resolver-order=0
 
 # Debugging
 logging.level.org.springframework.web=DEBUG
