Add development and production properties configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,3 +63,5 @@ backup.retention.days=30
 # Spring Profiles
 spring.profiles.active=prod
 spring.jpa.open-in-view=false
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
