--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
     		<version>2.11.0</version>
 		</dependency>
 		<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-math3</artifactId>
+    <version>3.6.1</version>
+</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
